# libefex

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  test_compile.c
.claude/: settings.local.json
.github/workflows/: cmake-multi-platform.yml  rust-ci.yml
app/: efex-cli.c
cmake/: add_test_case.cmake
examples/: multi_device_example.c
includes/: compiler.h  efex-common.h  efex-fel.h  efex-fes.h  efex-multi.h  efex-payloads.h  efex-protocol.h  efex-usb.h  ending.h  fel-payloads.h  fel-protocol.h  fes-protocol.h  libFEx.h  libefex.h  usb_layer.h
python/: BUILDING.md  libefex-binding.c  libfex-binding.c  setup.py  test_bindings.py
rust/: Cargo.toml  README.md  build.rs
rust/efex-cli/: Cargo.toml
rust/efex-cli/src/: main.rs
rust/examples/: basic_usage.rs  multi_device.rs
rust/libefex/: Cargo.toml
rust/libefex-sys/: Cargo.toml  build.rs
rust/libefex-sys/src/: lib.rs
rust/libefex/src/: lib.rs
rust/src/: arch.rs  context.rs  error.rs  lib.rs  memory.rs
rust/tests/: smoke_test.rs
src/: CMakeLists.txt  efex-common.c  efex-fel.c  efex-fes.c  efex-multi.c  efex-payloads.c  efex-protocol.c  efex-usb.c  fel-payloads.c  fel-protocol.c  fes-protocol.c  usb_layer.c
src/arch/: CMakeLists.txt  aarch64.c  arm.c  riscv.c
src/arch/riscv32_e907/: efex-payloads.c  fel-payloads.c
src/usb/: libusb_layer.c  usb_layer.c  usb_layer_libusb.c  usb_layer_winusb.c  winusb_layer.c
test/: e907_payload_io.c  fel_test.c  fes_flash.c  fes_test.c  hexdump_brom.c  scan_device.c  writel_readl.c
test/test_bin/: fes1.fex  u-boot-efex.fex
