[package]
name = "libefex-sys"
version = "0.1.0"
authors = ["YuzukiTsuru"]
description = "FFI bindings for libefex"
license = "MIT"
edition = "2021"
links = "efex"

[lib]
name = "libefex_sys"

[features]
vendored = []
vendored-shared = ["vendored"]

[dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.build-dependencies]
vcpkg = "0.2"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
