[package]
name = "libefex"
version = "0.1.0"
authors = ["YuzukiTsuru"]
description = "Rust bindings for libefex"
license = "MIT"
edition = "2021"

[features]
vendored = ["libefex-sys/vendored"]
vendored-shared = ["libefex-sys/vendored-shared"]

[dependencies]
libefex-sys = { path = "../libefex-sys" }
thiserror = "1.0"
libc = "0.2"
